Back to pico2w build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ cmake_minimum_required(VERSION 3.13...3.27)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Comment this out to go back to prev board
-# set(PICO_BOARD pico2_w)
-set(PICO_BOARD pico2)
+set(PICO_BOARD pico2_w)
+# set(PICO_BOARD pico2)
 
 include( ../pico-sdk/pico_sdk_init.cmake)
 
